--- a/index.html
+++ b/index.html
@@ -22,3 +22,19 @@
 				<img src="assets/image/Rectangle 21.png" alt="building">
 			</div>
 		</article>
+		<article class="article2">
+			<h3 class="h31">
+				სერვისები
+			</h3>
+			<div class="div3">
+			<p class="p">
+				ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
+			</p>
+			</div>
+			<div class="div4">
+				<img src="assets/image/Rectangle 20.png">
+			</div>
+		</article>
+	</section>
+</body>
+</html>
