--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 				<img src="assets/image/Rectangle 20.png">
 			</div>
 		</article>
+	</section>
+	<section>
 		
 	            <article class="article1">
 	                <h1>პროექტები</h1>
